integrating transactions logs service for escrows
